creation du fichier index.html pour pouvoir afficher le site

--- a/html/a propos.html
+++ b/html/a propos.html
@@ -11,7 +11,7 @@
     <header>
         <a href="#" class="logo">DADD</a>
         <nav>
-            <a href="aceuil.html">Aceuil</a>
+            <a href="index.html">Aceuil</a>
             <a href="a propos.html">A Propos</a>
             <a href="competences.html">Competances</a>
             <a href="contact.html">Contact</a>
